[gd_scene load_steps=6 format=2]

[ext_resource path="res://Weapons/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Sprits/muzzleFire.png" type="Texture" id=2]
[ext_resource path="res://Weapons/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprits/Default.png" type="Texture" id=4]

[sub_resource type="Animation" id=3]
resource_name = "muzzleFlash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 1 ), Vector2( 0.4, 1.2 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.239216, 0.168627, 1 )
scale = Vector2( 1, 0.3 )
texture = ExtResource( 4 )

[node name="GunBarrel" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="GunDirection" type="Position2D" parent="."]
position = Vector2( 17, 0 )

[node name="ShotCoolDown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 18, 0 )
rotation = 1.5708
scale = Vector2( 0.6, 1 )
texture = ExtResource( 2 )

[node name="FlashAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/muzzleFlash = SubResource( 3 )
